--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -109,3 +109,19 @@
   publisher = {Shelter, Support & Housing Administration},
   url = {https://open.toronto.ca/dataset/daily-shelter-occupancy/}
 },
+
+@Manual{rHere,
+  title = {here: A Simpler Way to Find Your Files},
+  author = {Müller, Kirill and Jennifer Bryan},
+  year = {2020},
+  note = {R package version 0.1.5},
+  url = {https://cran.r-project.org/web/packages/here/index.html},
+},
+
+@article{news1,
+  title = {‘Frustrating and deadly’: How the extreme cold is hitting Canada’s homeless},
+  author = {Naomi Barghiel},
+  year = {2024},
+  publisher = {Global News},
+  url = {https://globalnews.ca/news/10235191/homeless-protections-extreme-cold-canada/}
+}
